--- a/MyQQServer/MyQQServer/MyQQServer.vcxproj
+++ b/MyQQServer/MyQQServer/MyQQServer.vcxproj
@@ -192,6 +192,7 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="User.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CCSocket.cpp" />
