--- a/MyQQServer/MyQQServer/MyQQServer.vcxproj.filters
+++ b/MyQQServer/MyQQServer/MyQQServer.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="CMsg.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="User.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MyQQServer.cpp">
